--- a/anli_baseline.ipynb
+++ b/anli_baseline.ipynb
@@ -1192,6 +1192,27 @@
     "\n",
     "Misinterpretation of named roles or entities."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "636efff1",
+   "metadata": {},
+   "source": [
+    "Importing test_r3 results for 1.3 evaluation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "728a2203",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"pred_test_r3.json\", \"w\") as f:\n",
+    "    json.dump(pred_test_r3, f, indent=2)"
+   ]
   }
  ],
  "metadata": {
