--- a/imppres.ipynb
+++ b/imppres.ipynb
@@ -17,10 +17,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c0227b7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "283011bff7a74692a6763186f9454200",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61c4784d0df2455383d32314b5c915c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "implicature_connectives/connectives-0000(…):   0%|          | 0.00/25.5k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c788c3d13ad84e32abddb95175b200b5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating connectives split:   0%|          | 0/1200 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "sections = ['implicature_connectives', 'implicature_gradable_adjective', 'implicature_gradable_verb', 'implicature_modals', 'implicature_numerals_10_100', 'implicature_numerals_2_3', 'implicature_quantifiers', 'presupposition_all_n_presupposition', 'presupposition_both_presupposition', 'presupposition_change_of_state', 'presupposition_cleft_existence', 'presupposition_cleft_uniqueness', 'presupposition_only_presupposition', 'presupposition_possessed_definites_existence', 'presupposition_possessed_definites_uniqueness', 'presupposition_question_presupposition']\n",
@@ -31,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "653292e9",
    "metadata": {},
    "outputs": [
@@ -46,7 +89,7 @@
        "})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "af2406d6",
    "metadata": {},
    "outputs": [
@@ -74,7 +117,7 @@
        " 'lexemes': 'or - and'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,10 +128,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "5a66c85a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6ac71cda98b741b2a4b982c539cfcb9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "presupposition_change_of_state/change_of(…):   0%|          | 0.00/35.8k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c33c910978244ce0b801dd9b8cba4bcb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating change_of_state split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "pcos = load_dataset(\"facebook/imppres\", \"presupposition_change_of_state\")"
    ]
@@ -101,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "a273020f",
    "metadata": {},
    "outputs": [
@@ -116,7 +188,7 @@
        "})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "c78f2797",
    "metadata": {},
    "outputs": [
@@ -146,7 +218,7 @@
        " 'paradigmID': 0}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "8e6ddd37",
    "metadata": {},
    "outputs": [
@@ -175,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "02f9ae46",
    "metadata": {},
    "outputs": [],
@@ -186,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "28e5fea6",
    "metadata": {},
    "outputs": [
@@ -385,7 +457,7 @@
        "  'paradigmID': 0}]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,14 +468,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "782499a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba26badbff294bdaa966d319e50504f1",
+       "model_id": "a95cbabcb9004f5280c8cc9634b5d395",
        "version_major": 2,
        "version_minor": 0
       },
@@ -417,7 +489,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d00e4d8a9aee424e97da7b4977770469",
+       "model_id": "2da80247c0304f72bde8728598877e78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -435,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "2744d4c4",
    "metadata": {},
    "outputs": [
@@ -450,7 +522,7 @@
        "})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "bfb1b19b",
    "metadata": {},
    "outputs": [
@@ -476,7 +548,7 @@
        "})"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,11 +576,202 @@
    "id": "2e059777",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e19261b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "presupposition_all_n_presupposition: 1900\n",
+      "presupposition_both_presupposition: 1900\n",
+      "presupposition_change_of_state: 1900\n",
+      "presupposition_cleft_existence: 1900\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cd03ee1767b34db1bf98bbec9c7b4e35",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "presupposition_cleft_uniqueness/cleft_un(…):   0%|          | 0.00/38.3k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "88162984541d42d295e3e2d6623820f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating cleft_uniqueness split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "presupposition_cleft_uniqueness: 1900\n",
+      "presupposition_only_presupposition: 1900\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ef3c42ba39354472b10f5e0e77c9ae14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "presupposition_possessed_definites_exist(…):   0%|          | 0.00/38.7k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4832121be1d4283ad25e2dfb8c7d325",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating possessed_definites_existence split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "presupposition_possessed_definites_existence: 1900\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "108a79b3ddd3489d9466e7ac24e01203",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "presupposition_possessed_definites_uniqu(…):   0%|          | 0.00/42.1k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a92d279af1604fffa3786fdbf7f54179",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating possessed_definites_uniqueness split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "presupposition_possessed_definites_uniqueness: 1900\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4df3e3a181a9432b9ef0e36e9443da3f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "presupposition_question_presupposition/q(…):   0%|          | 0.00/41.2k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7be8fcd82be441ca87868674a27c62f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating question_presupposition split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "presupposition_question_presupposition: 1900\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = []\n",
+    "for section in sections[7:]:\n",
+    "    section_data = load_dataset(\"facebook/imppres\", section)[section.removeprefix(\"presupposition_\")]\n",
+    "    print(f\"{section}: {len(section_data)}\")\n",
+    "    for entry in section_data:\n",
+    "        dataset.append({\n",
+    "            \"premise\": entry[\"premise\"],\n",
+    "            \"hypothesis\": entry[\"hypothesis\"],\n",
+    "            \"trigger\": entry[\"trigger\"], \n",
+    "            \"trigger1\": entry[\"trigger2\"],\n",
+    "            \"trigger2\": entry[\"trigger2\"], \n",
+    "            \"presupposition\": entry[\"presupposition\"], \n",
+    "            \"gold_label\": entry[\"gold_label\"],\n",
+    "            \"UID\": entry[\"UID\"], \n",
+    "            \"pairID\": entry[\"pairID\"],\n",
+    "            \"paradigmID\": entry[\"paradigmID\"], \n",
+    "            \"section\": section\n",
+    "        })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "49ab727b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"imppres_dataset.json\", \"w\") as f:\n",
+    "    json.dump(dataset, f, indent=2)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "hw2",
    "language": "python",
    "name": "python3"
   },
@@ -522,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
