--- a/imppres_baseline.ipynb
+++ b/imppres_baseline.ipynb
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "0cfe31ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "label_names = [\"entailment\", \"neutral\", \"contradiction\"]\n",
-    "def evaluate(premise, hypothesis):\n",
+    "def evaluate_baseline(premise, hypothesis):\n",
     "    input = tokenizer(premise, hypothesis, truncation=True, return_tensors=\"pt\")\n",
     "    output = model(input[\"input_ids\"].to(device))\n",
     "    prediction = torch.softmax(output[\"logits\"][0], -1).tolist()\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "a2954d97",
    "metadata": {},
    "outputs": [
@@ -54,18 +54,18 @@
        "{'entailment': 0.1, 'neutral': 99.8, 'contradiction': 0.0}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluate(\"The weather is nice today.\", \"It is sunny outside.\")"
+    "evaluate_baseline(\"The weather is nice today.\", \"It is sunny outside.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "923ea5e0",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "0438789b",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "e59927ea",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        " })}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "b8262068",
    "metadata": {},
    "outputs": [],
@@ -217,12 +217,19 @@
     "    for example in tqdm(dataset):\n",
     "        premise = example['premise']\n",
     "        hypothesis = example['hypothesis']\n",
-    "        prediction = evaluate(premise, hypothesis)\n",
+    "        prediction = evaluate_baseline(premise, hypothesis)\n",
     "        results.append({\n",
     "            'premise': premise,\n",
     "            'hypothesis': hypothesis,\n",
     "            'prediction': prediction,\n",
-    "            'pred_label': get_prediction(prediction),\n",
+    "            'trigger': example['trigger'],\n",
+    "            'trigger1': example['trigger1'],\n",
+    "            'trigger2': example['trigger2'],\n",
+    "            'presupposition': example['presupposition'],\n",
+    "            'UID': example['UID'],\n",
+    "            'pairID': example['pairID'],\n",
+    "            'paradigmID': example['paradigmID'],\n",
+    "            'baseline_pred_label': get_prediction(prediction),\n",
     "            'gold_label': label_names[example['gold_label']],\n",
     "        })\n",
     "    return results"
@@ -240,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "0e2e9027",
    "metadata": {},
    "outputs": [],
@@ -251,40 +258,6 @@
     "precision = load(\"precision\")\n",
     "recall = load(\"recall\")\n",
     "f1 = load(\"f1\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "1ab24e1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf_metrics = evaluate.combine([\"accuracy\", \"f1\", \"precision\", \"recall\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "5d04f0c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'accuracy': 0.6666666666666666,\n",
-       " 'f1': 0.6666666666666666,\n",
-       " 'precision': 1.0,\n",
-       " 'recall': 0.5}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf_metrics.compute(predictions=[0, 1, 0], references=[0, 1, 1])"
    ]
   },
   {
@@ -304,11 +277,175 @@
    "id": "a51fbc81",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ecef0956",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1900/1900 [07:06<00:00,  4.45it/s]\n",
+      "100%|██████████| 1900/1900 [06:51<00:00,  4.62it/s]\n",
+      "100%|██████████| 1900/1900 [06:49<00:00,  4.64it/s]\n",
+      "100%|██████████| 1900/1900 [06:57<00:00,  4.55it/s]\n",
+      "100%|██████████| 1900/1900 [06:51<00:00,  4.61it/s]\n",
+      "100%|██████████| 1900/1900 [07:04<00:00,  4.48it/s]\n",
+      "100%|██████████| 1900/1900 [09:43<00:00,  3.26it/s]  \n",
+      "100%|██████████| 1900/1900 [06:43<00:00,  4.71it/s]\n",
+      "100%|██████████| 1900/1900 [06:46<00:00,  4.67it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline_evaluation_list = {}\n",
+    "for section in sections:\n",
+    "    baseline_evaluation_list[section] = evaluate_on_dataset(dataset[section][section.removeprefix(\"presupposition_\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "97699c83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_map = {\n",
+    "    \"entailment\": 0,\n",
+    "    \"neutral\": 1,\n",
+    "    \"contradiction\": 2\n",
+    "}\n",
+    "def display_metrics(section_evaluation_results, section_name):\n",
+    "    \n",
+    "    test_predictions = [label_map[e[\"baseline_pred_label\"]] for e in section_evaluation_results]\n",
+    "    test_references = [label_map[e[\"gold_label\"]] for e in section_evaluation_results]\n",
+    "\n",
+    "    acc = accuracy.compute(predictions=test_predictions, references=test_references)[\"accuracy\"]\n",
+    "    prec = precision.compute(predictions=test_predictions, references=test_references, average=\"weighted\")[\"precision\"]\n",
+    "    rec = recall.compute(predictions=test_predictions, references=test_references, average=\"weighted\")[\"recall\"]\n",
+    "    f1_score = f1.compute(predictions=test_predictions, references=test_references, average=\"weighted\")[\"f1\"]\n",
+    "\n",
+    "    print(f\"\\n=== Metrics for {section_name} ===\")\n",
+    "    print(f\"{'Accuracy:':<15} {acc:.4f}\")\n",
+    "    print(f\"{'Precision (weighted):':<15} {prec:.4f}\")\n",
+    "    print(f\"{'Recall (weighted):':<15} {rec:.4f}\")\n",
+    "    print(f\"{'F1-score (weighted):':<15} {f1_score:.4f}\")\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "11a30f13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "displaying metrics for each section:\n",
+      "\n",
+      "=== Metrics for presupposition_all_n_presupposition ===\n",
+      "Accuracy:       0.4626\n",
+      "Precision (weighted): 0.4211\n",
+      "Recall (weighted): 0.4626\n",
+      "F1-score (weighted): 0.4109\n",
+      "\n",
+      "=== Metrics for presupposition_both_presupposition ===\n",
+      "Accuracy:       0.3968\n",
+      "Precision (weighted): 0.2877\n",
+      "Recall (weighted): 0.3968\n",
+      "F1-score (weighted): 0.3246\n",
+      "\n",
+      "=== Metrics for presupposition_change_of_state ===\n",
+      "Accuracy:       0.3084\n",
+      "Precision (weighted): 0.3263\n",
+      "Recall (weighted): 0.3084\n",
+      "F1-score (weighted): 0.3032\n",
+      "\n",
+      "=== Metrics for presupposition_cleft_existence ===\n",
+      "Accuracy:       0.6411\n",
+      "Precision (weighted): 0.6768\n",
+      "Recall (weighted): 0.6411\n",
+      "F1-score (weighted): 0.5955\n",
+      "\n",
+      "=== Metrics for presupposition_cleft_uniqueness ===\n",
+      "Accuracy:       0.1953\n",
+      "Precision (weighted): 0.2270\n",
+      "Recall (weighted): 0.1953\n",
+      "F1-score (weighted): 0.2024\n",
+      "\n",
+      "=== Metrics for presupposition_only_presupposition ===\n",
+      "Accuracy:       0.5832\n",
+      "Precision (weighted): 0.6534\n",
+      "Recall (weighted): 0.5832\n",
+      "F1-score (weighted): 0.5273\n",
+      "\n",
+      "=== Metrics for presupposition_possessed_definites_existence ===\n",
+      "Accuracy:       0.6705\n",
+      "Precision (weighted): 0.8154\n",
+      "Recall (weighted): 0.6705\n",
+      "F1-score (weighted): 0.6196\n",
+      "\n",
+      "=== Metrics for presupposition_possessed_definites_uniqueness ===\n",
+      "Accuracy:       0.3900\n",
+      "Precision (weighted): 0.2703\n",
+      "Recall (weighted): 0.3900\n",
+      "F1-score (weighted): 0.3074\n",
+      "\n",
+      "=== Metrics for presupposition_question_presupposition ===\n",
+      "Accuracy:       0.6253\n",
+      "Precision (weighted): 0.7037\n",
+      "Recall (weighted): 0.6253\n",
+      "F1-score (weighted): 0.5494\n",
+      "displaying metrics for all sections combined:\n",
+      "\n",
+      "=== Metrics for all sections ===\n",
+      "Accuracy:       0.4748\n",
+      "Precision (weighted): 0.4777\n",
+      "Recall (weighted): 0.4748\n",
+      "F1-score (weighted): 0.4452\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"displaying metrics for each section:\")\n",
+    "\n",
+    "for section in sections:\n",
+    "    display_metrics(baseline_evaluation_list[section], section)\n",
+    "\n",
+    "print(\"displaying metrics for all sections combined:\")\n",
+    "\n",
+    "from itertools import chain\n",
+    "\n",
+    "all_sections = list(chain.from_iterable(baseline_evaluation_list.values()))\n",
+    "\n",
+    "display_metrics(all_sections, \"all sections\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "aa1ac4ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"dataset_with_baseline_evaluation.json\", \"w\") as f:\n",
+    "    json.dump(baseline_evaluation_list, f, indent=2)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "hw2",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
