finished 2.4, added json files

--- a/imppres.ipynb
+++ b/imppres.ipynb
@@ -20,50 +20,7 @@
    "execution_count": 1,
    "id": "c0227b7d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "283011bff7a74692a6763186f9454200",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61c4784d0df2455383d32314b5c915c4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "implicature_connectives/connectives-0000(…):   0%|          | 0.00/25.5k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c788c3d13ad84e32abddb95175b200b5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating connectives split:   0%|          | 0/1200 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "sections = ['implicature_connectives', 'implicature_gradable_adjective', 'implicature_gradable_verb', 'implicature_modals', 'implicature_numerals_10_100', 'implicature_numerals_2_3', 'implicature_quantifiers', 'presupposition_all_n_presupposition', 'presupposition_both_presupposition', 'presupposition_change_of_state', 'presupposition_cleft_existence', 'presupposition_cleft_uniqueness', 'presupposition_only_presupposition', 'presupposition_possessed_definites_existence', 'presupposition_possessed_definites_uniqueness', 'presupposition_question_presupposition']\n",
@@ -131,36 +88,7 @@
    "execution_count": 4,
    "id": "5a66c85a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ac71cda98b741b2a4b982c539cfcb9d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "presupposition_change_of_state/change_of(…):   0%|          | 0.00/35.8k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c33c910978244ce0b801dd9b8cba4bcb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating change_of_state split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pcos = load_dataset(\"facebook/imppres\", \"presupposition_change_of_state\")"
    ]
@@ -471,36 +399,7 @@
    "execution_count": 10,
    "id": "782499a9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a95cbabcb9004f5280c8cc9634b5d395",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "presupposition_only_presupposition/only_(…):   0%|          | 0.00/38.1k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2da80247c0304f72bde8728598877e78",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating only_presupposition split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pop = load_dataset(\"facebook/imppres\", \"presupposition_only_presupposition\")"
    ]
@@ -579,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "e19261b2",
    "metadata": {},
    "outputs": [
@@ -590,147 +489,11 @@
       "presupposition_all_n_presupposition: 1900\n",
       "presupposition_both_presupposition: 1900\n",
       "presupposition_change_of_state: 1900\n",
-      "presupposition_cleft_existence: 1900\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd03ee1767b34db1bf98bbec9c7b4e35",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "presupposition_cleft_uniqueness/cleft_un(…):   0%|          | 0.00/38.3k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88162984541d42d295e3e2d6623820f9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating cleft_uniqueness split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "presupposition_cleft_existence: 1900\n",
       "presupposition_cleft_uniqueness: 1900\n",
-      "presupposition_only_presupposition: 1900\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef3c42ba39354472b10f5e0e77c9ae14",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "presupposition_possessed_definites_exist(…):   0%|          | 0.00/38.7k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4832121be1d4283ad25e2dfb8c7d325",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating possessed_definites_existence split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "presupposition_possessed_definites_existence: 1900\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "108a79b3ddd3489d9466e7ac24e01203",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "presupposition_possessed_definites_uniqu(…):   0%|          | 0.00/42.1k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a92d279af1604fffa3786fdbf7f54179",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating possessed_definites_uniqueness split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "presupposition_possessed_definites_uniqueness: 1900\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4df3e3a181a9432b9ef0e36e9443da3f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "presupposition_question_presupposition/q(…):   0%|          | 0.00/41.2k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7be8fcd82be441ca87868674a27c62f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating question_presupposition split:   0%|          | 0/1900 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "presupposition_only_presupposition: 1900\n",
+      "presupposition_possessed_definites_existence: 1900\n",
+      "presupposition_possessed_definites_uniqueness: 1900\n",
       "presupposition_question_presupposition: 1900\n"
      ]
     }
@@ -745,7 +508,7 @@
     "            \"premise\": entry[\"premise\"],\n",
     "            \"hypothesis\": entry[\"hypothesis\"],\n",
     "            \"trigger\": entry[\"trigger\"], \n",
-    "            \"trigger1\": entry[\"trigger2\"],\n",
+    "            \"trigger1\": entry[\"trigger1\"],\n",
     "            \"trigger2\": entry[\"trigger2\"], \n",
     "            \"presupposition\": entry[\"presupposition\"], \n",
     "            \"gold_label\": entry[\"gold_label\"],\n",
@@ -758,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "49ab727b",
    "metadata": {},
    "outputs": [],
